[project]
name = "cv-cctv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "ultralytics>=8.4.17",
    "torch>=2.5.0",
    "torchvision",
    "pip",
    "lap>=0.5.13",
    "tqdm>=4.67.3",
    "shapely>=2.1.2",
    "pandas>=3.0.1",
]
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]
